# portal

./: .gitignore  CMakeLists.txt  Correcciones  README.md  install.sh  json_file  json_file2
src/client/: CMakeLists.txt  ConfigPartida.h  Event_handler.cpp  Event_handler.h  Joiner.cpp  Joiner.h  MatchConfig.h  Message_sender.cpp  Message_sender.h  client.cpp  client_communicator.cpp  client_communicator.h  client_controller.cpp  client_controller.h  client_deserializer.cpp  client_deserializer.h  data_container.cpp  data_container.h  event_handler_manager.cpp  event_handler_manager.h  event_handler_thread.cpp  event_handler_thread.h  local_scene_logic.cpp  local_scene_logic.h  position_converter.cpp  position_converter.h  qt_executor.cpp  qt_executor.h  renderable.cpp  renderable.h  scene_manager.cpp  scene_manager.h
src/client/ffmpeg/: ffmpeg.cpp  ffmpeg.h
src/client/map_editor/: interface.cpp  interface.h  json_node.cpp  json_node.h  map_saver.cpp  map_saver.h
src/common/: CMakeLists.txt  Constants.h  Thread.cpp  common_cola_protegida.cpp  common_cola_protegida.h  common_error.cpp  common_error.h  common_protocol.cpp  common_protocol.h  common_socket_connect.cpp  common_socket_connect.h
src/inicio/: Application.cpp  Application.h  CMakeLists.txt  VentanaPrincipal.cpp  VentanaPrincipal.h  VentanaPrincipal.ui  main.cpp  moc_Application.cpp  moc_VentanaPrincipal.cpp  resources.qrc  ui_Inicio.h  ui_VentanaPrincipal.h  ventanaprincipal_automoc.cpp
src/inicio/CrearSala/: CrearSala.pro  main.cpp
src/inicio/EleccionSala/: EleccionSala.pro  main.cpp
src/inicio/inicio/: inicio.pro
src/inicio/src/: Inicio.cpp
src/inicio/ui/: Inicio.ui
src/server/: CMakeLists.txt  Encoder.cpp  Encoder.h  Protected_Data_Base.cpp  Protected_Data_Base.h  json_file  server.cpp  server_client_acceptor.cpp  server_client_acceptor.h  server_command.cpp  server_command.h  server_command_anti_gravity.cpp  server_command_anti_gravity.h  server_command_disconnected.cpp  server_command_disconnected.h  server_command_factory.cpp  server_command_factory.h  server_command_finish_game.cpp  server_command_finish_game.h  server_command_inmortal.cpp  server_command_inmortal.h  server_command_join.cpp  server_command_join.h  server_command_jump.cpp  server_command_jump.h  server_command_kill.cpp  server_command_kill.h  server_command_mates.cpp  server_command_mates.h  server_command_move.cpp  server_command_move.h  server_command_move_rock.cpp  server_command_move_rock.h  server_command_next_level.cpp  server_command_next_level.h  server_command_shoot.cpp  server_command_shoot.h  server_command_start.cpp  server_command_start.h  server_command_suicide.cpp  (+21 more)
src/server/level_creator/: CMakeLists.txt  factory_objetcs.cpp  factory_objetcs.h  json_file  map_parser.cpp  map_parser.h  object.h  object_acid.cpp  object_acid.h  object_bottoms.cpp  object_bottoms.h  object_button.cpp  object_button.h  object_cake.cpp  object_cake.h  object_door.cpp  object_door.h  object_emitter.cpp  object_emitter.h  object_energy_ball.cpp  object_energy_ball.h  object_energy_barrel.cpp  object_energy_barrel.h  object_energy_barrier.cpp  object_energy_barrier.h  object_gate.cpp  object_gate.h  object_lunch_block.cpp  object_lunch_block.h  object_metal_block.cpp  object_metal_block.h  object_portal.cpp  object_portal.h  object_rock.cpp  object_rock.h  object_stone_block.cpp  object_stone_block.h  object_triangular_block.cpp  object_triangular_block.h
src/server/modelo/: Acid.cpp  Acid.h  Block.cpp  Block.h  Bottom.cpp  Bottom.h  Button.cpp  Button.h  CMakeLists.txt  Cake.cpp  Cake.h  Chell_Player.cpp  Chell_Player.h  Energy_Ball.cpp  Energy_Ball.h  Energy_Barrier.cpp  Energy_Barrier.h  Energy_Emitters.cpp  Energy_Emitters.h  Entity.h  Filter_Data.cpp  Filter_Data.h  Foot_Sensor.cpp  Foot_Sensor.h  Gate.cpp  Gate.h  Ground.cpp  Ground.h  InvalidPosition.cpp  InvalidPosition.h  InvalidTeletraportation.cpp  InvalidTeletraportation.h  Macros.h  Metal_Block.cpp  Metal_Block.h  MyContactListener.cpp  MyContactListener.h  Player_Portals.cpp  Player_Portals.h  Portal.cpp  (+8 more)
src/vista/: CMakeLists.txt  Camara.cpp  Camara.h  Constants.h  EventsHandler.cpp  EventsHandler.h  Makefile  Model.cpp  Model.h  ModelController.cpp  ModelController.h  ModelFacade.cpp  ModelFacade.h  MusicBase.cpp  MusicBase.h  Rect.cpp  Rect.h  SdlException.cpp  SdlException.h  SoundManager.cpp  SoundManager.h  Sprite.cpp  Sprite.h  TextureBase.cpp  TextureBase.h  Window.cpp  Window.h  cmake_install.cmake  comandos.json
src/vista/Acid/: Acid.cpp  Acid.h  Idle_acid.cpp  Idle_acid.h  Touched_acid.cpp  Touched_acid.h
src/vista/Blocks/: Block.h  BlockFactory.h  Metal_block.cpp  Metal_block.h  Metal_block_sprite.cpp  Metal_block_sprite.h  Shoot_block.cpp  Shoot_block.h  Shoot_block_sprite.cpp  Shoot_block_sprite.h  Stone_block.cpp  Stone_block.h  Stone_block_sprite.cpp  Stone_block_sprite.h  Triangle_block.cpp  Triangle_block.h  Triangle_block_sprite.cpp  Triangle_block_sprite.h
src/vista/Button/: Button.cpp  Button.h  ButtonOff_button.cpp  ButtonOff_button.h  ButtonOn_button.cpp  ButtonOn_button.h
src/vista/Cake/: Cake.cpp  Cake.h  Cake_cake_sprite.cpp  Cake_cake_sprite.h
src/vista/Emitter/: Emitter.cpp  Emitter.h  Emitter_sprite.cpp  Emitter_sprite.h  Target_sprite.cpp  Target_sprite.h
src/vista/EnergyBarrier/: EnergyBarrier.cpp  EnergyBarrier.h  EnergyBarrier_sprite.cpp  EnergyBarrier_sprite.h
src/vista/Gate/: Closed_gate.cpp  Closed_gate.h  Closing_gate.cpp  Closing_gate.h  Gate.cpp  Gate.h  Open_gate.cpp  Open_gate.h  Opening_gate.cpp  Opening_gate.h
src/vista/Mains/: mainAcid.cpp  mainBlock.cpp  mainButton.cpp  mainEvents.cpp  mainGate.cpp  mainPlayer.cpp  mainPower.cpp
src/vista/Player/: Dancing_player.cpp  Dancing_player.h  Dying_player.cpp  Dying_player.h  FireIdleToRest_player.h  Fire_player.cpp  Fire_player.h  Idle_player.cpp  Idle_player.h  JumpFall_player.cpp  JumpFall_player.h  JumpRise_player.cpp  JumpRise_player.h  Player.cpp  Player.h  RestingIdle_player.cpp  RestingIdle_player.h  RunningShoot_player.cpp  RunningShoot_player.h  Stop_player.h  (+4 more)
(+39 files in other folders)
